<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ostium</string>
    <string name="title_activity_maps">Map</string>
    <string name="button">Button</string>

    <string name="action_websearch">action_websearch</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="screen_name_map">Map</string>
    <string name="screen_name_add_tasks">Add Tasks</string>
    <string name="screen_name_add_calendar">Add Calendar</string>
    <string name="screen_name_select_theme">Change Theme</string>
    <string name="screen_name_location">Locations</string>
    <string name="screen_name_home">Home</string>
    <string name="screen_name_settings">Settings</string>

    <string-array name="theme_array">
        <item>OSTIUM</item>
        <item>OSTIUM_DARK</item>
        <item>OSTIUM_TWO</item>
        <item>OSTIUM_DARK_TWO</item>

    </string-array>

    <string name="settings_text_select_theme">Select Theme:</string>
    <string name="settings_text_credentials">Credentials</string>
    <string name="settings_text_username_hint">username</string>
    <string name="settings_text_password_hint">password</string>
    <string name="settings_text_sync_automatically">Sync automatically</string>
    <string name="settings_text_location">Location</string>
    <string name="settings_text_state_on">On</string>
    <string name="settings_text_state_off">Off</string>
    <string name="settings_text_clear_data">Clear Data</string>
    <string name="colour_picker">Colour Picker</string>

</resources>
