<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android = "http://schemas.android.com/apk/res/android">

    <item
        android:id = "@+id/nav_location"

        android:title="@string/screen_name_location"
        />

    <item
        android:id = "@+id/nav_map"

        android:title="@string/screen_name_map"
        />

    <item
        android:id = "@+id/nav_settings"

        android:title="@string/screen_name_settings"
        />

    <item
        android:id="@+id/nav_change_theme"

        android:title="@string/screen_name_select_theme"
        />
    <item
        android:id="@+id/nav_add_tasks"

        android:title="@string/screen_name_add_tasks"
        />
    <item
        android:id="@+id/nav_add_calendar"

        android:title="@string/screen_name_add_calendar"
        />

</menu>