<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_menu_white_24dp"
        android:title=""
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/nav_location"
                android:icon="@drawable/ic_location_on_black_24dp"
                android:title="@string/screen_name_location"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map_black_24dp"
                android:title="@string/screen_name_map"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/screen_name_settings"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/nav_change_theme"
                android:icon="@drawable/ic_color_lens_black_24dp"
                android:title="@string/colour_picker"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/nav_add_tasks"
                android:icon="@drawable/ic_list_black_24dp"
                android:title="@string/screen_name_add_tasks"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/nav_add_calendar"
                android:icon="@drawable/ic_list_black_24dp"
                android:title="@string/screen_name_add_calendar"
                app:showAsAction="ifRoom"/>

        </menu>
    </item>
</menu>